develop a system for avoiding z-index problems

--- a/customize.dist/src/less/loading.less
+++ b/customize.dist/src/less/loading.less
@@ -3,7 +3,7 @@
 
 #loading {
     position: fixed;
-    z-index: 9999999;
+    z-index: 10000000; // #loading
     top: 0px;
     bottom: 0px;
     left: 0px;
@@ -35,7 +35,7 @@
 }
 #loadingTip {
     position: fixed;
-    z-index: 99999;
+    z-index: 100000; // loading tip
     top: 80%;
     left: 0;
     right: 0;
