--- a/customize.dist/src/less2/include/infopages.less
+++ b/customize.dist/src/less2/include/infopages.less
@@ -117,7 +117,7 @@
 .infopages_topbar () {
     .cp-topbar {
         background: #fff;
-        z-index: 9001;
+        z-index: 10000; //Z infopage toolbar
         position: fixed;
         top: 0;
         display: flex;
